# book-recommender

./: README.md  pyproject.toml
book_recommender/: ExploratoryDataAnalysis.ipynb
tests/: test_book_recommender.py
