[tool.poetry]
name = "book-recommender"
version = "0.1.0"
description = ""
authors = ["fyreswordgames <fyreswordgames@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
